fixed a few footer styles, added the align-left class to some sidebars

--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -86,3 +86,7 @@ img#footer-logo {
 footer #copyright {
     border-top: 0px;
 }
+
+.hji-powered a {
+  color: $brand-primary-light-40 !important;
+}
